<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/logo2"
    >
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="420dp"
        android:id="@+id/logo"
        android:background="@drawable/logo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo"/>
    <EditText
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:id="@+id/mail"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/logo3"
        android:inputType="text"
        android:hint="@string/mail"
        android:padding="3dp"
        />
    <EditText
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:id="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/mail"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/logo3"
        android:inputType="text"
        android:hint="@string/password"
        android:padding="3dp"
        />
    <ImageButton
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:id="@+id/buttonEnter"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:src="@drawable/enter1"
        android:background="@color/logo2"
        android:contentDescription="@string/enter"
        />
    <TextView
        android:layout_width="400dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonEnter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:id="@+id/newUser"
        android:text="@string/newUser"
        android:textColor="@color/logo3"
        android:textSize="16dp"
        android:clickable="true"
        android:onClick="goToNewUser"
        android:gravity="center"
        android:contentDescription="para registrarse"
        />

</androidx.constraintlayout.widget.ConstraintLayout>