<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newUser"
    android:background="@color/logo2"
    >

  <TextView
      android:id="@+id/title_reg"
      android:layout_width="wrap_content"
      android:layout_height="30dp"
      android:text="@string/new_user"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="50dp"
      android:textSize="25sp"
      android:textColor="@color/logo3"
      />
  <ImageView
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:id="@+id/imagenl"
      android:background="@drawable/logo_red"
      app:layout_constraintTop_toBottomOf="@+id/title_reg"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="100dp"
      />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="30dp"
      android:id="@+id/textemail"
      app:layout_constraintTop_toBottomOf="@+id/imagenl"
      app:layout_constraintStart_toStartOf="@id/editmail"
      app:layout_constraintBottom_toTopOf="@id/editmail"
      android:text="@string/email"
      android:layout_marginTop="50dp"
      android:textSize="15sp"
      android:layout_marginEnd="200dp"
      android:textColor="@color/logo3"
      />

  <EditText
      android:layout_width="400dp"
      android:layout_height="30dp"
      android:id="@+id/editmail"
      app:layout_constraintTop_toBottomOf="@+id/textemail"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="10dp"
      android:background="@color/logo3"
      android:textColor="@color/white"
      android:hint="@string/mail"
      android:paddingStart="10dp"
      />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="30dp"
      android:id="@+id/textuser"
      app:layout_constraintTop_toBottomOf="@+id/editmail"
      app:layout_constraintStart_toStartOf="@id/edituser"
      app:layout_constraintBottom_toTopOf="@+id/edituser"
      android:text="@string/user_reg"
      android:layout_marginTop="20dp"
      android:textSize="15sp"
      android:layout_marginEnd="200dp"
      android:textColor="@color/logo3"
      />

  <EditText
      android:layout_width="400dp"
      android:layout_height="30dp"
      android:id="@+id/edituser"
      app:layout_constraintTop_toBottomOf="@+id/textuser"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="10dp"
      android:background="@color/logo3"
      android:textColor="@color/white"
      android:hint="@string/user"
      android:paddingStart="10dp"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="30dp"
      android:id="@+id/textpassword"
      app:layout_constraintTop_toBottomOf="@+id/edituser"
      app:layout_constraintStart_toStartOf="@+id/editpassword"
      app:layout_constraintBottom_toTopOf="@+id/editpassword"
      android:text="@string/password_reg"
      android:layout_marginTop="20dp"
      android:textSize="15sp"
      android:layout_marginEnd="200dp"
      android:textColor="@color/logo3"
      />

  <EditText
      android:layout_width="400dp"
      android:layout_height="30dp"
      android:id="@+id/editpassword"
      app:layout_constraintTop_toBottomOf="@+id/textpassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="10dp"
      android:background="@color/logo3"
      android:textColor="@color/white"
      android:hint="@string/password"
      android:paddingStart="10dp"
      />

  <ImageButton
      android:id="@+id/btnreg"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/submitt_rec"
      app:layout_constraintTop_toBottomOf="@+id/editpassword"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="50dp"
      android:background="@color/logo2"
      android:onClick="onRegisterButtonClick"
      />


</androidx.constraintlayout.widget.ConstraintLayout>